Added reason why I am trying GitHub.

--- a/README
+++ b/README
@@ -1,1 +1,6 @@
 Hello, World.
+
+I'm testing out github since this is what all the "cool kids" seem to be using 
+these days.  I'm used to using git locally on my machines, so it'll be a bit of 
+a learning curve on how to use git with remotes.
+
